# mcl

./: CMakeLists.txt  Config.cc  Curses.cc  Embedded.cc  InputLine.cc  Makefile  OutputWindow.cc  Readme.md  Screen.cc  Selection.cc  StatusLine.cc  TTY.cc  config.status  main.cc
h/: String.h  config.h
includes/: Buffer.h  Config.h  Control.h  Curses.h  LuaEmbeddedInterpreter.h  StatusLine.h  Window.h  config.h
plugins/: CMakeLists.txt  LuaEmbeddedInterpreter.cc  PerlEmbeddedInterpreter.cc  PythonEmbeddedInterpreter.cc
